gap fix

--- a/styles/index/style.scss
+++ b/styles/index/style.scss
@@ -831,7 +831,7 @@ main {
       flex-direction: column;
       justify-content: space-between;
       width: 100%;
-      gap: 100px;
+      gap: 50px;
     }
 
     .user-info-container{
